docker compose changed to restart always for aws service. read me file updated to reflect aws hosting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@
       depends_on:
         - db
       command: npm run prod
+      restart: unless-stopped
     db:
       image: postgres:15-alpine
       restart: always
